--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
 img {
   width 50%;
 }
+h1 {
+  font-size: 3rem;
+  background-color: mediumslateblue;
+  border-color: midnightblue;
+  border-width: medium;
+  
+}
