--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 body {
-    background-image: url("../images/bluebackground.jpg");
+    background-image: url("../images/vipersunrise.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -50,7 +50,9 @@ h2 {
     text-align: center;
     text-decoration: underline;
  }
-
+nav:hover {
+  color: green;
+}
 
 }
 html {
@@ -68,11 +70,11 @@ html {
 
 
 }
-.projects {
-  text-align: center;
-  display: inline-block;
+.projects_title {
   background-color: dodgerblue;
+  text-align: center;
   border-radius: 10px;
+  padding: 10px;
 
 
 }
