--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 body {
-    background-image: url("../images/vipersunrise.jpg");
+    background-image: url("../images/bluepattern.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -63,15 +63,17 @@ html {
   /* background-color: lavender; */
 
 .aboutme {
-  background: rgba(66, 169, 105, 0.75);
+  background-color: rgba(255,255,255,0.65);
 
+  /* background: white; */
   border-radius: 10px;
   padding: 10px;
 
 
 }
 .projects_title {
-  background-color: rgba(67, 114, 168, 0.75);
+  background-color: rgba(255,255,255,0.65);
+
   text-align: center;
   border-radius: 10px;
   padding: 10px;
@@ -80,7 +82,8 @@ html {
 }
 
 .contact {
-  background-color: #31ad6d;
+  background-color: rgba(255,255,255,0.65);
+  background: flex;
   display: flex;
   flex-position: row;
   justify-content: space-around;
@@ -91,20 +94,22 @@ html {
 }
 
 .projects p {
-  background-color:rgba(66, 169, 105, 0.75);
+  background-color: rgba(255,255,255,0.65);
+
   text-align: center;
   border-radius: 10px;
   padding: 10px;
 }
 .skills {
   text-align: center;
-  background-color:rgba(66, 169, 105, 0.75);
+  background-color: rgba(255,255,255,0.65);
 
   border-radius: 10px;
   padding: 10px;
 }
 .projects li {
-  background-color: rgba(67, 114, 168, 0.75);
+  background-color: rgba(255,255,255,0.65);
+
   text-align: center;
   border-radius: 10px;
   padding: 10px;
