--- a/src/main/static/css/style.css
+++ b/src/main/static/css/style.css
@@ -4,21 +4,77 @@
   padding: 0;
 }
 body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 
-    /* color: white; */
 
 }
-.hero-image{
-  position: relative;
-  height: 500px;
-  overflow:hidden;
-  background: url(sanibeldesk.jpg) no-repeat center;
-  background-size: cover;
+header {
+  display: flex;
+  position: fixed;
+  align-items: center;
+  top: 0;
+  left: 0;
+  padding-left: 10px;
+  background: black;
+  width: 100%;
+  box-sizing: border-box;
+
+}
+.header_item {
+  align-items: center;
+}
+.navList {
+  display: flex;
+  float: right;
+  overflow: hidden;
+  background: #black;
+}
+.navList a {
+  float: right;
+  display: flex;
+  color: #fff;
+  text-align: right;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 18px;
+
+}
+
+
+.navList a:hover,
+.navList a.active {
+  color: #fff;
+  background: #2196f3;
+}
+.navList .icon {
+  display: none;
+}
+@media screen and (max-width: 700px) {
+ .navList a:not(:first-child) {display: none;}
+ .navList a.icon {
+   float: right;
+   display: block;
+ }
+}
+@media screen (max-width: 700px) {
+  .navList.responsive {position: relative;}
+  .navList.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .navList.responsive li {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
 .container {
-  display: grid;
 
-  background-image: url("../images/bluestoneywall - Copy.jpg");
+
+  background-image: url("images/pilotmtn.jpg");
 
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -31,45 +87,36 @@ body {
 }
 
 .header {
-
-  display:flex;
-  position: fixed;
-  flex-direction: row;
+  color: #fff;
+  height: 50px;
+  line-height: 50px;
+  font-size: 18px;
+  float: left;
+  font-weight: bold;
   align-items: baseline;
-  justify-content: space-around;
-  overflow: hidden;
+}
+/* h3 {
+  color: #fff;
+  height: 50px;
+  line-height: 50px;
+  font-size: 18px;
+  float: center;
+  font-weight: bold;
+} */
 
-  width:100%;
 
 
-  background: black;
-  color: white;
-  mix-blend-mode: multiply;
-  font-size: 1rem;
-  font-family: arial black;
-  padding-bottom: 10px;
-  padding-top: 5px;
-  text-align: center;
-  text-decoration: underline;
+
+
+
+
 
 
 }
-.header_item {
-
-}
-.header nav:hover {
-
-
-}
-.grid_container {
-  margin-top: 100px;
-  margin-left: 2rem;
-  margin-right: 2rem;
-  display: grid;
-  grid-column-gap: 2rem;
-  grid-template-columns: 1fr 3fr 1fr;
-
-
+.modalImg {
+  width: 25%;
+  display: flex;
+  justify-content: flex-start;
 }
 img {
   width: 50%;
@@ -100,13 +147,40 @@ h2 {
   /* background-color: lavender; */
 
 .aboutme {
-  background-color: rgba(255,255,255,0.65);
+  font-family: sans-serif;
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100;
+  height: 100;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
 
-  /* background: white; */
-  border-radius: 10px;
-  padding: 10px;
+.modal-content {
+  font-family: sans-serif;
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
 
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
 
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
 .projects_title {
   background-color: rgba(255,255,255,0.65);
@@ -119,6 +193,8 @@ h2 {
 }
 
 .contact {
+  font-family: sans-serif;
+  font-weight: normal;
   position: fixed;
   left: 0;
   bottom: 0;
@@ -127,8 +203,8 @@ h2 {
   display: flex;
   justify-content: space-around;
   background: black;
-  color: white;
-  mix-blend-mode: multiply;
+  color: #fff;
+
   align-items: center;
   text-align: center;
   padding-top: 5px;
