--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: 'Fahkwang', sans-serif;
+  font-family: 'Poppins', sans-serif;
   background-image: url("../images/snowroad.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -34,13 +34,19 @@ body {
 .header_item {
   align-items: center;
 } */
+header {
+
+  position: fixed;
+  width: 100%;
+}
 nav {
   display: flex;
+  position: relative;
   justify-content: space-around;
   align-items: center;
-  font-family: 'Fahkwang', sans-serif;
+  font-family: 'Poppins', sans-serif;
   min-height: 8vh;
-  background-color: #5b78c7;
+  /* background-color: #5b78c7; */
 
 }
 
@@ -127,10 +133,10 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    width: 100%;
     transform: translateX(100%);
     transition: transform 0.6s ease-in;
-
+    opacity: 0.7;
   }
 
   .nav-links li {
