created js for the hamburger menu

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@
 
 /* general styles */
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: var(--clr-light);
   color: var(--clr-dark);
@@ -181,6 +185,30 @@ header {
   z-index: 1000;
 }
 
+.nav-open .nav {
+  transform: translateX(0);
+
+}
+
+.nav-open .nav-toggle {
+  position: fixed;
+}
+
+.nav-open .hamburger,
+.nav-open .hamburger::before,
+.nav-open .hamburger::after {
+  background: var(--clr-accent);
+}
+.nav-open .hamburger {
+  transform: rotate(.625turn);
+}
+
+.nav-open .hamburger::before {
+  transform: rotate(90deg) translate(-6px);
+}
+.nav-open .hamburger::after {
+  opacity: 0;
+}
 .hamburger {
 
   display: block;
@@ -210,7 +238,9 @@ header {
 }
 
 .hamburger::after {
+
   bottom: 6px;
+
 }
 
 /* intro section */
